@@ -16,6 +16,7 @@ v0.5dev (ongoing development)
  + hd44780: Fix vBars and block icon not working correctly on the same screen
  * Build system: Link LCDd itself with pthread library if available
  * lcdproc client: Unbreak build on OpenBSD non-i386 (E. Barrett)
+ * lcdproc client: Fix core dumps on FreeBSD if started as non-root
 
 v0.5.5
  + sed1330 driver: Add support for HG25504 (L. Lagendijk)
